# chunkydonkey

./: .gitignore  Dockerfile  README.md  diagram.mermaid  docker-compose.yml  flow.md  pyproject.toml  schema.sql
gotenberg/: Dockerfile
ollama/: Modelfile  entrypoint.sh
src/chunkydonkey/: archive_to_files.py  db.py  html_to_markdown.py  image_to_chunks.py  image_to_markdown.py  main.py  markdown_to_chunks.py  markdown_to_markdown.py  office_to_pdf.py  oldpipeline.py  pdf_to_chunks.py  pdf_to_markdown.py  pipeline.py  storage.py  tabular_to_chunks.py  tabular_to_markdown.py  url_to_file.py  utils.py  vlm.py  worker.py
src/chunkydonkey/prompts/: image_to_chunks.md  vlm.md
src/fatingest/: main.py  parse.py  vlm.py
