[project]
name = "chunkydonkey"
version = "0.1.0"
description = "Document ingestion pipeline: any file in, markdown chunks out, stored in PostgreSQL with pgvector."
requires-python = ">=3.12"
dependencies = [
    "asyncpg",
    "clevercsv",
    "fastapi",
    "filetype",
    "httpx",
    "openai",
    "playwright",
    "polars",
    "pymupdf",
    "pymupdf4llm",
    "python-multipart",
    "trafilatura",
    "uvicorn",
    "lxml",
    "aioboto3>=15.5.0",
    "pillow>=12.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
